[gd_scene load_steps=4 format=3 uid="uid://c4glodl21jgi2"]

[ext_resource type="Script" path="res://scenes/stopwatch_ui.gd" id="1_t7xu2"]
[ext_resource type="PackedScene" uid="uid://ck0u55igveb4s" path="res://scenes/stopwatch.tscn" id="2_m0v6e"]
[ext_resource type="FontVariation" uid="uid://d3ddb5qhwgva6" path="res://resources/font/font_time.tres" id="2_u8cm0"]

[node name="stopwatch_ui" type="VBoxContainer"]
offset_right = 510.0
offset_bottom = 317.0
theme_override_constants/separation = 32
alignment = 1
script = ExtResource("1_t7xu2")

[node name="stopwatch" parent="." instance=ExtResource("2_m0v6e")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
alignment = 1

[node name="b_start" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_u8cm0")
theme_override_font_sizes/font_size = 33
toggle_mode = true
text = "S"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="b_reset" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_u8cm0")
theme_override_font_sizes/font_size = 33
disabled = true
text = "R"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="b_clipboard" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_u8cm0")
theme_override_font_sizes/font_size = 33
text = "C"
